[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/weapons/base/BaseWeapon.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Weapon" type="Node2D"]
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
width = 2.0
default_color = Color( 1, 0.913725, 0, 1 )

[node name="Anim" type="AnimationPlayer" parent="Line2D"]
anims/fade = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 20, 0 )
scale = Vector2( 1, 0.2 )
texture = ExtResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true

[node name="FireCooldown" type="Timer" parent="."]
one_shot = true

[node name="ReloadCooldown" type="Timer" parent="."]
one_shot = true

[node name="AmmoCount" type="Label" parent="."]
margin_left = 58.924
margin_top = -7.52615
margin_right = 98.924
margin_bottom = 6.47385
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="ReloadCooldown" to="." method="_on_ReloadCooldown_timeout"]
